--- a/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
+++ b/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
@@ -17,13 +17,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/textViewThoughtTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:paddingBottom="10dp"
@@ -32,7 +32,7 @@
 
                 <TextView
                     android:id="@+id/textViewThoughtDesc"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:paddingBottom="10dp"
