--- a/thoughtshakeup/src/main/res/layout/fragment_screen_edit_special.xml
+++ b/thoughtshakeup/src/main/res/layout/fragment_screen_edit_special.xml
@@ -6,8 +6,7 @@
     <!-- Dummy content. -->
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/linearLayoutThought"
@@ -27,7 +26,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingBottom="10dp"
                     android:text="Your Thoughts: "
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -36,7 +34,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingBottom="10dp"
                     android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/amber_900"
@@ -93,18 +90,17 @@
                 android:text="Medium Text"
                 android:id="@+id/textViewThoughtCorrectIncorrect"
                 android:textStyle="bold" />
-
-            <EditText
+            <org.md2k.thoughtshakeup.EditTextDone
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:id="@+id/editText_thought"
                 android:background="@drawable/editbox_border"
                 android:focusable="true"
-                android:singleLine="true"
                 android:padding="10dp"
+                android:imeOptions="actionDone"
                 android:text="Please &apos;TAP&apos; here to type..."
-                android:textColor="@color/grey_500" />
+                android:textColor="@color/grey_500"
+                android:inputType="textMultiLine" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
