--- a/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
+++ b/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
@@ -6,8 +6,7 @@
     <!-- Dummy content. -->
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/linearLayoutThought"
             android:layout_width="match_parent"
@@ -26,7 +25,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingBottom="10dp"
                     android:text="Your Thoughts: "
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -35,7 +33,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingBottom="10dp"
                     android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/amber_900"
