--- a/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
+++ b/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
@@ -1,7 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
     <!-- Dummy content. -->
     <LinearLayout android:layout_width="match_parent"
@@ -40,10 +41,6 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lightgreen_900" />
         </LinearLayout>
 
         <TextView style="?android:textAppearanceMedium"
@@ -51,7 +48,13 @@
             android:lineSpacingMultiplier="1.2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/lightgreen_900" />
 
         <Space
             android:id="@+id/space"
