--- a/thoughtshakeup/src/main/res/layout/activity_thought_show.xml
+++ b/thoughtshakeup/src/main/res/layout/activity_thought_show.xml
@@ -11,9 +11,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Original Thought"
+        android:textStyle="bold"
         android:id="@+id/textView7"
         android:gravity="center_vertical|center_horizontal"
-        android:paddingTop="10dp"
+        android:paddingTop="40dp"
         android:paddingBottom="10dp"
         android:textColor="@color/lightgreen_900" />
     <View
@@ -26,18 +27,17 @@
         android:layout_height="wrap_content"
         android:text="Large Text"
         android:id="@+id/textViewThought"
-        android:paddingTop="40dp"
-        android:paddingBottom="40dp"
-        android:textSize="32dp" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/lightgreen_900" />
+        android:paddingTop="0dp"
+        android:paddingBottom="80dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:textColor="@color/amber_900" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
         android:text="Shake it up!"
         android:gravity="center_vertical|center_horizontal"
         android:paddingTop="10dp"
@@ -53,12 +53,10 @@
         android:layout_height="wrap_content"
         android:text="Large Text"
         android:id="@+id/textViewRephrase"
-        android:paddingTop="40dp"
+        android:paddingTop="0dp"
         android:paddingBottom="40dp"
-        android:textSize="32dp" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/lightgreen_900" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:textColor="@color/blue_400" />
 
 </LinearLayout>
