--- a/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
+++ b/thoughtshakeup/src/main/res/layout/fragment_screen_text_review.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="Your Thoughts: "
+                    android:text="Your Thoughts"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
