literature, about, copyright page added

--- a/thoughtshakeup/src/main/res/menu/menu_options.xml
+++ b/thoughtshakeup/src/main/res/menu/menu_options.xml
@@ -5,4 +5,14 @@
     <item android:id="@+id/action_supporting_literature"
         android:title="Supporting Literature"
         />
+    <item android:id="@+id/action_about"
+        android:title="About"
+        />
+    <item android:id="@+id/action_copyright"
+        android:title="Copyright"
+        />
+
+    <item android:id="@+id/action_exit"
+        android:title="Exit"
+        />
 </menu>
