--- a/thoughtshakeup/src/main/res/menu/menu_history_clear.xml
+++ b/thoughtshakeup/src/main/res/menu/menu_history_clear.xml
@@ -2,10 +2,20 @@
 <item android:id="@+id/action_home"
     android:title="Home"
     />
-<item android:id="@+id/action_supporting_literature"
-    android:title="Supporting Literature"
-    />
-<item android:id="@+id/action_history_clear"
-    android:title="Clear History"/>
+    <item android:id="@+id/action_history_clear"
+        android:title="Clear History"/>
+    <item android:id="@+id/action_supporting_literature"
+        android:title="Supporting Literature"
+        />
+    <item android:id="@+id/action_about"
+        android:title="About"
+        />
+    <item android:id="@+id/action_copyright"
+        android:title="Copyright"
+        />
+
+    <item android:id="@+id/action_exit"
+        android:title="Exit"
+        />
 
 </menu>
