--- a/thoughtshakeup/src/main/res/layout/activity_diary_old.xml
+++ b/thoughtshakeup/src/main/res/layout/activity_diary_old.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ActivityDiary">
+    android:keepScreenOn="true"
+    tools:context=".ActivityHistory">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/content"
