--- a/thoughtshakeup/src/main/res/layout/activity_history.xml
+++ b/thoughtshakeup/src/main/res/layout/activity_history.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ActivityDiary">
+    android:keepScreenOn="true"
+    tools:context=".ActivityHistory">
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
