--- a/thoughtshakeup/src/main/res/layout/activity_literature.xml
+++ b/thoughtshakeup/src/main/res/layout/activity_literature.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <ScrollView
