--- a/thoughtshakeup/src/main/res/layout/activity_thought_exercise.xml
+++ b/thoughtshakeup/src/main/res/layout/activity_thought_exercise.xml
@@ -1,5 +1,6 @@
 <org.md2k.thoughtshakeup.NonSwipeableViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_pager"
+    android:keepScreenOn="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"/>
